--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "salaab-startup",
   "private": true,
@@ -10,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
+    "@types/node": "^25.0.3",
+    "openai": "^6.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
